# cargo-generate-undefault

./: Cargo.toml  LICENSE  README.md  cargo-generate.toml
src/: lib.rs
