[package]
name = "{{project-name}}"
version = "0.0.0"
authors = ["{{authors}}"]
edition = "2018"
# description = "(WiP)"
# readme = "README.md"
categories = [ ]
keywords = [ ]
# homepage = "https://usagi.github.io/{{project-name}}/"
# repository = "https://github.com/usagi/{{project-name}}/"
license = "MIT"
exclude = [ ]
build = [ ]

[workspace]
members = [ ]

# [[lib]]
# crate-type = [ ]
# name = "{{crate_name}}"
# path = "src/lib.rs"

# [[bin]]
# name = "{{crate_name}}"
# path = "src/main.rs"

[dependencies]

[profile.release]
lto = true

# [badges]
# appveyor = { repository = "{{project-name}}/{{project-name}}" }
# is-it-maintained-issue-resolution = { repository = "{{project-name}}/{{project-name}}" }
# is-it-maintained-open-issues = { repository = "{{project-name}}/{{project-name}}" }
# maintenance = { status = "actively-developed" }
# travis-ci = { repository = "{{project-name}}/{{project-name}}" }
